<?xml version="1.0"?>
<package>
  <name>cnpy</name>
  <version>0.0.6</version>
  <description>library to read/write .npy and .npz files in C/C++</description>
  <maintainer email="pmitrano@umich.edu">Peter Mitrano</maintainer>
  <license>MIT</license>

  <author>Carl Rogers</author>
  <author>Peter Mitrano</author>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>cmake</build_depend>
  <build_depend>zlib</build_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
